<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"





    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop"
        android:layout_width="178dp"
        android:layout_height="292dp"
        android:background="@color/red"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/stop"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="178dp"
        android:layout_height="292dp"
        android:background="@color/green"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/start"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/swSound"
        android:layout_width="178dp"
        android:layout_height="136dp"
        android:background="@color/white"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/swSound"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus"
        android:layout_width="178dp"
        android:layout_height="140dp"
        android:background="@color/lightBlue"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/minus"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus"
        android:layout_width="178dp"
        android:layout_height="140dp"
        android:background="@color/darkBlue"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/swGPS"
        android:layout_width="178dp"
        android:layout_height="136dp"
        android:background="@color/darkgrey"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/swGPS"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>